[tool.poetry]
name = "salary-service"
version = "0.1.0"
description = "REST service for viewing current salary and next raise date"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "0.99.1"
uvicorn = "^0.15.0"
passlib = "^1.7.4"
python-dotenv = "^0.19.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
fastapi-jwt-auth = "^0.5.0"
pydantic = "1.10.15"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"